test/cases/compile_errors/invalid_pointer_syntax.zig
export fn foo() void {
    var guid: *:0 const u8 = undefined;
}

// error
//
// :2:16: error: expected type expression, found ':'
